kerwin-order/order-app/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: order
spec:
  host: "*"
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
